k8s/1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  namespace: apps
  labels:
    name: myapp
spec:
  containers:
  - name: myapp
    image: aleferreiranogueira/k8s-training-app:0.1
    resources:
      requests:
        memory: "64Mi"
        cpu: "100m"
      limits:
        memory: "64Mi"
        cpu: "100m"
    ports:
      - containerPort: 8080
