k8s/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: app
spec:
  type: ClusterIP
  selector:
    name: myapp
  ports:
  - protocol: TCP
    port: 6000
    targetPort: 8080
