k8s/3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: app
  annotations:  
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: app.local.dev
    http:
      paths:
      - backend:
          service:
            name: "myapp-service"
            port:
              number: 6000 
        pathType: Prefix
        path: /
